--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,17 @@ main {
     text-align: center;
 }
 
+.casamento h4, .presentes h4{
+    font-size: 18px;
+}
+
 .casamento, .presentes {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+}
+.casamento{
+    margin: 2em 1em 1em;
 }
 
 .casamento__container {
@@ -300,6 +307,10 @@ main {
     display: block;
 }
 
+#contato {
+    width: 100%;
+}
+
 .footer {
     background-color: #E5FCC2;
     border-top: 1px solid #E0E0E0;
@@ -357,7 +368,8 @@ main {
     height: 52px;
     background: url("../images/Google_Maps_Icon.png") no-repeat scroll 0 0 / 48px auto rgba(0, 0, 0, 0);
 }
-.presenca{
+
+.presenca {
     background: url("../images/presence.png") no-repeat scroll 0 0 / 48px auto rgba(0, 0, 0, 0);
     border-radius: 6px;
 }
@@ -439,6 +451,19 @@ main {
         margin-right: 0;
     }
 
+}
+
+@media screen and (max-width: 800px) {
+    video {
+        display: none;
+    }
+
+    .casamento div, .presente {
+        padding-left: 6px;
+    }
+    .presentes{
+        display: none;
+    }
 }
 
 @media screen and (min-width: 800px) {
@@ -538,6 +563,11 @@ main {
         width: 0;
     }
 
+    .footer {
+        display: inherit;
+        flex-wrap: inherit;
+    }
+
     .marker {
         height: 20%;
         width: 100%;
@@ -558,6 +588,33 @@ main {
     .yellow {
         background-color: yellow;
     }
+
+    video {
+        position: fixed;
+        right: 0;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -100;
+        background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+        background-size: cover;
+        transition: 1s opacity;
+    }
+
+    #contato {
+        /*background: rgba(0, 0, 0, 0.3);*/
+        color: white;
+        font-size: 1.2rem;
+        font-weight: 100;
+        padding: 2rem;
+        margin: 2rem;
+    }
+
+    #contato div {
+        width: 50%;
+        float: right;
+    }
 }
 
 @media screen and (min-width: 620px) and (max-width: 696px) {
@@ -567,29 +624,5 @@ main {
 
 }
 
-video {
-    position: fixed;
-    right: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
-    background-size: cover;
-    transition: 1s opacity;
-}
 
-#contato {
-    background: rgba(0, 0, 0, 0.3);
-    color: white;
-    font-size: 1.2rem;
-    font-weight: 100;
-    padding: 2rem;
-    margin: 2rem;
-    width: 100%;
-}
-#contato div{
-    width: 50%;
-    float: right;
-}
+
