--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body, html {
     padding: 0;
     width: 100%;
     height: 100%;
+    /*overflow-x: hidden;*/
 }
 
 body {
@@ -218,7 +219,9 @@ main {
 .casamento h4, .presentes h4{
     font-size: 18px;
 }
-
+.presente{
+    height: 150px;
+}
 .casamento, .presentes {
     width: 100%;
     display: flex;
@@ -341,13 +344,16 @@ main {
 }
 
 .presenca {
-    background: url("../images/presence.png") no-repeat scroll 0 0 / 48px auto rgba(0, 0, 0, 0);
+    background: url("../images/presenceboth.png") no-repeat scroll 0 0 / 48px auto rgba(0, 0, 0, 0);
     border-radius: 6px;
 }
 
 .inbox:hover, .maps:hover, .presenca:hover {
     background-position: 0 0;
     /*transform: rotate(20deg);*/
+}
+.presenca:hover {
+    background-position: 0 -48px;
 }
 
 .ig-b-48 {
@@ -390,6 +396,17 @@ main {
     -webkit-animation: sonarEffect 1.3s ease-out 75ms;
     -moz-animation: sonarEffect 1.3s ease-out 75ms;
     animation: sonarEffect 1.3s ease-out 75ms;
+}
+
+
+.tokstok{
+    background: url('../images/TOKSTOK.png') no-repeat 50% center ;
+}
+.ponto-frio{
+    background: url('../images/pontofrio.png') no-repeat 50% center ;
+}
+.mgluiza{
+    background: url('../images/mgluiza.jpg') no-repeat 50% center ;
 }
 
 @-webkit-keyframes sonarEffect {
@@ -504,6 +521,10 @@ main {
 }
 
 @media screen and (max-width: 800px) {
+    .mb-only{
+        margin-top: -11px;
+    }
+
     video {
         display: none;
     }
@@ -521,7 +542,7 @@ main {
         width: inherit;
         position: inherit;
         height: inherit;
-        background: url("../images/kiss_waterfall_HD.jpg") center center /cover no-repeat;
+        background: url("../images/kiss_waterfall_HD-compressed.jpg") center center /cover no-repeat;
     }
 
     .about__noivos h4 {
