--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,6 @@ ul {
     z-index: 100;
 }
 
-.header__logo {
-    height: 72px;
-    margin-right: 1em;
-    vertical-align: top;
-    margin-top: 12px;
-}
-
 .header__title {
     color: #ffffff;
     font-weight: 300;
@@ -174,7 +167,7 @@ main {
 }
 
 .padrinhos__album div {
-    padding-left: 20px;
+    padding-left: 6%;
     padding-right: 0px;
 }
 
@@ -201,10 +194,10 @@ main {
 }
 
 .padrinho_pic:hover {
-    -webkit-transform: scale(1.5); /* prefixo para browsers webkit */
-    -moz-transform: scale(1.5); /* prefixo para browsers gecko */
-    -o-transform: scale(1.5); /* prefixo para opera */
-    transform: scale(1.5);
+    -webkit-transform: scale(1.1); /* prefixo para browsers webkit */
+    -moz-transform: scale(1.1); /* prefixo para browsers gecko */
+    -o-transform: scale(1.1); /* prefixo para opera */
+    transform: scale(1.1);
 }
 
 /*
@@ -220,7 +213,8 @@ main {
     font-size: 18px;
 }
 .presente{
-    height: 150px;
+    height: 150px
+;
 }
 .casamento, .presentes {
     width: 100%;
@@ -522,7 +516,7 @@ main {
 
 @media screen and (max-width: 800px) {
     .mb-only{
-        margin-top: -11px;
+        margin-top: -15px;
     }
 
     video {
@@ -547,6 +541,13 @@ main {
 
     .about__noivos h4 {
         font-size: 2em;
+    }
+
+    .padrinho_pic:hover {
+        -webkit-transform: scale(1.3);
+        -moz-transform: scale(1.3);
+        -o-transform: scale(1.3);
+        transform: scale(1.3);
     }
 
     .lg-only {
@@ -612,11 +613,11 @@ main {
     }
 
     #slide-4 .caption {
-        right: auto;
-        left: 5%;
-        top: 5%;
-        bottom: auto;
-        color: #47373f;
+        /*right: auto;*/
+        /*left: 5%;*/
+        /*top: 5%;*/
+        /*bottom: auto;*/
+        /*color: #47373f;*/
     }
 
     #slide-5 {
